[package]
name = "advanced_concurrent_tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
futures = "0.3.30"
async-trait = "0.1.77"

[lib]
name = "advanced_concurrent_tasks"
path = "src/lib.rs"